--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,9 @@
 </head>
 <body>
      <h1>Profile</h1>
-     <div id="student-list"></div>
+     <table id="student-list">
+        
+     </table>
      <script src="profile.js"></script>
 </body>
 </html>
